--- a/React_study/ch07/ch07 개발과정.md
+++ b/React_study/ch07/ch07 개발과정.md
@@ -24,12 +24,14 @@
 세가지를 연결
 
 > #### **_1. useRef(n)_**
->=> 값을 담아주는 키워드, 고유값으로 사용될 id, ref를 사용하여 변수 담기\
+>
+> => 값을 담아주는 키워드, 고유값으로 사용될 id, ref를 사용하여 변수 담기\
 > => useState와 다른점은 State는 계속해서 렌더링을 주는 반면\
-=> useRef는 state에 계속해서 재사용 될 때 재렌더링을 하지 않는다.
+> => useRef는 state에 계속해서 재사용 될 때 재렌더링을 하지 않는다.
 >
 > #### **_2. preventDefault()_**
->=> 브라우저의 새로고침 방지
+>
+> => 브라우저의 새로고침 방지
 
 ```
 const nextId = useRef(4)
