--- a/React_study/myfolder/총정리.md
+++ b/React_study/myfolder/총정리.md
@@ -161,10 +161,14 @@ $\bf{\textsf{\color{navy}{}}}$
 -  $\bf{\textsf{\color{navy}{State\ 변경}}}$\ State 변경\
     state 변경 => 컴포넌트 업데이트 => 렌더링
 -  $\bf{\textsf{\color{navy}{부모 컴포넌트 재 렌더링}}}$\
-    부모 컴포넌트 렌더링 => 자식 컴포넌트 업데이트 => 자식 렌더링\
+ 부모 컴포넌트 렌더링 => 자식 컴포넌트 업데이트 => 자식 렌더링\
+<details>
+<summary> <span>1. 컴포넌트가 렌더링이 될 때마다(직후) 실행</span>
 
-1. 컴포넌트가 렌더링이 될 때마다(직후) 실행\
+</summary>
    ![](./md_image/2024-11-08-13-08-32.png)
+</details>
+
 2. 뒤에 [] 를 붙이면 첫 렌더링 후 업데이트 때는 실행하지 않음\
    ![](./md_image/2024-11-08-13-04-25.png)
 3. 특정 값이 변경될 때 호출\
@@ -185,9 +189,25 @@ const UseEffectEX = () => {
    const [name, setName] = useState('')
    const [nickname, setNickname] = useState('')
 
-   /*
+   //1. 컴포넌트가 렌더링이 될때마다 실행
+   //    useEffect(() => {
+   //       console.log('렌더링이 완료되었습니다')
+   //       console.log({ name, nickname })
+   //    })
 
-    */
+   //2. 뒤에 [] 를 붙이면 첫 렌더링 후 업데이트 때는 실행하지 않음
+   //    useEffect(() => {
+   //       console.log('렌더링이 완료되었습니다')
+   //       console.log({ name, nickname })
+   //    }, [])
+
+   //3. 특정 값이 변경될 때 호출
+   //    useEffect(() => {
+   //       console.log('렌더링이 완료되었습니다')
+   //       console.log({ name, nickname })
+   //    }, [name])
+
+   // 4. 뒷정리 함수: 컴포넌트가 업데이트 되기 전 실행
    useEffect(() => {
       console.log('렌더링이 완료되었습니다')
       console.log(name)
