--- a/React_study/myfolder/총정리.md
+++ b/React_study/myfolder/총정리.md
@@ -140,6 +140,15 @@ export default Chapter5
 
 ## Chapter 6. Hook
 
+-  useEffect
+-  useMemo
+-  useCallback
+-  useRef
+-  useState
+-  useContext
+-  useReducer
+-  [커스텀훅 (ToggleExample & useToggle)](#커스텀-훅-예제)
+
 $\small{\bf{\textsf{\color{orange}{참고 Hook 공부때 console에 2번찍히니 <React.StrictMode> 끄기}}}}$
 
 ### 핵심
@@ -245,6 +254,83 @@ const UseEffectEX = () => {
 }
 
 export default UseEffectEX
+```
+
+</details>
+
+### [커스텀 훅 예제](#chapter-6-hook)
+
+<details>
+<summary>
+$\bf{\textsf{\color{hotpink}useToggle.js}}$
+
+</summary>
+
+```
+import { useState } from 'react'
+
+function useToggle(initialValue) {
+   const [value, setValue] = useState(initialValue)
+
+   const toggle = () => {
+      setValue(!value)
+   }
+
+   return [value, toggle]
+}
+
+export default useToggle
+
+```
+
+</details>
+
+<details>
+<summary>
+$\bf{\textsf{\color{hotpink}ToggleExample.js}}$
+
+</summary>
+
+```
+import React from 'react'
+import useToggle from './useToggle' // 커스텀 훅 임포트
+
+function ToggleExample() {
+   const [isToggled, toggle] = useToggle(false)
+
+   return (
+      <div>
+         <button onClick={toggle}>{isToggled ? '끄기' : '켜기'}</button>
+         {isToggled && <p>토글 상태가 켜져 있습니다.</p>}
+      </div>
+   )
+}
+
+export default ToggleExample
+
+```
+
+</details>
+
+<details>
+<summary>
+$\bf{\textsf{\color{hotpink}App.js}}$
+</summary>
+
+```
+import Chpater4 from './summarize/Chapter4'
+// import Chpater6 from './summarize/Chapter6'
+import ToggleExample from './summarize/Chpater6/ToggleExample'
+
+function App() {
+   return (
+      // <Chpater4 />
+      // <Chpater6 />
+      <ToggleExample />
+   )
+}
+
+export default App
 ```
 
 </details>
