--- a/React_study/myfolder/총정리.md
+++ b/React_study/myfolder/총정리.md
@@ -172,18 +172,9 @@ $\bf{\textsf{\color{navy}{}}}$
 -  $\bf{\textsf{\color{navy}{부모 컴포넌트 재 렌더링}}}$\
     부모 컴포넌트 렌더링 => 자식 컴포넌트 업데이트 => 자식 렌더링\
 
-$\large{\bf{\textsf{\color{navy}{1. 컴포넌트가 렌더링이 될 때마다(직후) 실행}}}}$\
- ![](./md_image/2024-11-08-13-08-32.png)\  
- $\large{\bf{\textsf{\color{navy}{2. 뒤에 [] 를 붙이면 첫 렌더링 후 업데이트 때는 실행하지 않음}}}}$\
- ![](./md_image/2024-11-08-13-04-25.png)\
- $\large{\bf{\textsf{\color{navy}{3. 특정 값이 변경될 때 호출}}}}$\
- ![](./md_image/2024-11-08-13-14-01.png)\
- $\large{\bf{\textsf{\color{navy}{4. 뒷정리 함수: 컴포넌트가 업데이트 되기 전 실행}}}}$\
- ![](./md_image/2024-11-08-13-31-27.png)
-
 <details>
 <summary>
-$\bf{\textsf{\color{hotpink}Chapter 6}}$
+$\bf{\textsf{\color{hotpink}useEffect}}$
 
 </summary>
 
@@ -257,6 +248,15 @@ export default UseEffectEX
 ```
 
 </details>
+
+$\normalsize{\bf{\textsf{\color{navy}{1. 컴포넌트가 렌더링이 될 때마다(직후) 실행}}}}$\
+ ![](./md_image/2024-11-08-13-08-32.png)\  
+ $\normalsize{\bf{\textsf{\color{navy}{2. 뒤에 [] 를 붙이면 첫 렌더링 후 업데이트 때는 실행하지 않음}}}}$\
+ ![](./md_image/2024-11-08-13-04-25.png)\
+ $\normalsize{\bf{\textsf{\color{navy}{3. 특정 값이 변경될 때 호출}}}}$\
+ ![](./md_image/2024-11-08-13-14-01.png)\
+ $\normalsize{\bf{\textsf{\color{navy}{4. 뒷정리 함수: 컴포넌트가 업데이트 되기 전 실행}}}}$\
+ ![](./md_image/2024-11-08-13-31-27.png)
 
 ### [커스텀 훅 예제](#chapter-6-hook)
 
