--- a/React_study/myfolder/총정리.md
+++ b/React_study/myfolder/총정리.md
@@ -140,14 +140,17 @@ export default Chapter5
 
 ## Chapter 6. Hook
 
--  useEffect
+> -  Hook을 사용하는 이유?\
+>    [함수형]
+
+-  [1. useEffect](#1-useeffect)
 -  useMemo
 -  useCallback
 -  useRef
 -  useState
 -  useContext
 -  useReducer
--  [커스텀훅 (ToggleExample & useToggle)](#커스텀-훅-예제)
+-  [8. customHook (feat. [ToggleExample.js] & [useToggle.js] )](#8-customhook)
 
 $\small{\bf{\textsf{\color{orange}{참고 Hook 공부때 console에 2번찍히니 <React.StrictMode> 끄기}}}}$
 
@@ -172,9 +175,13 @@ $\bf{\textsf{\color{navy}{}}}$
 -  $\bf{\textsf{\color{navy}{부모 컴포넌트 재 렌더링}}}$\
     부모 컴포넌트 렌더링 => 자식 컴포넌트 업데이트 => 자식 렌더링\
 
+### [1. useEffect](#chapter-6-hook)
+
+#### [image example Link](#useeffect-이미지-설명)
+
 <details>
 <summary>
-$\bf{\textsf{\color{hotpink}useEffect}}$
+$\bf{\textsf{\color{hotpink}Code보기}}$
 
 </summary>
 
@@ -247,18 +254,11 @@ const UseEffectEX = () => {
 export default UseEffectEX
 ```
 
+#### [useEffect 이미지](#useeffect-이미지-설명)
+
 </details>
 
-$\normalsize{\bf{\textsf{\color{navy}{1. 컴포넌트가 렌더링이 될 때마다(직후) 실행}}}}$\
- ![](./md_image/2024-11-08-13-08-32.png)\  
- $\normalsize{\bf{\textsf{\color{navy}{2. 뒤에 [] 를 붙이면 첫 렌더링 후 업데이트 때는 실행하지 않음}}}}$\
- ![](./md_image/2024-11-08-13-04-25.png)\
- $\normalsize{\bf{\textsf{\color{navy}{3. 특정 값이 변경될 때 호출}}}}$\
- ![](./md_image/2024-11-08-13-14-01.png)\
- $\normalsize{\bf{\textsf{\color{navy}{4. 뒷정리 함수: 컴포넌트가 업데이트 되기 전 실행}}}}$\
- ![](./md_image/2024-11-08-13-31-27.png)
-
-### [커스텀 훅 예제](#chapter-6-hook)
+### [8. customHook](#chapter-6-hook)
 
 <details>
 <summary>
@@ -334,3 +334,51 @@ export default App
 ```
 
 </details>
+
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+\
+
+#### [useEffect 이미지 설명](#1-useeffect)
+
+$\normalsize{\bf{\textsf{\color{navy}{1. 컴포넌트가 렌더링이 될 때마다(직후) 실행}}}}$\
+ ![](./md_image/2024-11-08-13-08-32.png)\  
+ $\normalsize{\bf{\textsf{\color{navy}{2. 뒤에 [] 를 붙이면 첫 렌더링 후 업데이트 때는 실행하지 않음}}}}$\
+ ![](./md_image/2024-11-08-13-04-25.png)\
+ $\normalsize{\bf{\textsf{\color{navy}{3. 특정 값이 변경될 때 호출}}}}$\
+ ![](./md_image/2024-11-08-13-14-01.png)\
+ $\normalsize{\bf{\textsf{\color{navy}{4. 뒷정리 함수: 컴포넌트가 업데이트 되기 전 실행}}}}$\
+ ![](./md_image/2024-11-08-13-31-27.png)
+
+## Chapter 9. Router
+
+<span style="font-size:16px">앞서 index.js에서 〈App /〉을 〈BrowserRouter〉감싸기</span>
+
+```
+/* ---index.js--- */
+<BrowserRouter>
+    <App />
+</BrowserRouter>
+
+/* ---App.js--- */
+import { Route, Routes } from ''
+```
