--- a/React_study/myfolder/총정리.md
+++ b/React_study/myfolder/총정리.md
@@ -1,3 +1,12 @@
+# Chapter 정리
+
+-  <span style="20px"> [Chapter 4. Event Handling](#chapter-4-event-handling) </span>
+-  <span style="20px"> [Chapter 6. Hook](#chapter-6-hook) </span>
+-  <span style="20px"> [Chapter 9. Router](#chapter-9-router) </span>
+-  <span style="20px"> [Chapter 10. Styled Components](#chapter-10-styled-componenets) </span>
+-  <span style="20px"> [Chapter 11. Redux](#chapter-11-redux) </span>
+-  <span style="20px"> [Chapter 12. Redux](#chapter-12-redux-toolkit) </span>
+
 useState : 인풋창 사용때 가장 많이 쓰는것같다고함
 분리를 해서 써야 useCallback 쓰기 편함
 useCallback : 함수의 재생성 방지 => 최적화
@@ -35,7 +44,7 @@ return (
 
 ```
 
-## Chapter4
+## [Chapter 4. Event Handling](#chapter-정리)
 
 -  이벤트 핸들링에서는 불변성 immutability이 중요함
 -  스프레드 문법을 활용해여\
@@ -138,7 +147,7 @@ function Chapter5 () {
 export default Chapter5
 ```
 
-## Chapter 6. Hook
+## [Chapter 6. Hook](#chapter-정리)
 
 > -  Hook을 사용하는 이유?\
 >    [함수형]
@@ -369,16 +378,51 @@ $\normalsize{\bf{\textsf{\color{navy}{1. 컴포넌트가 렌더링이 될 때마
  $\normalsize{\bf{\textsf{\color{navy}{4. 뒷정리 함수: 컴포넌트가 업데이트 되기 전 실행}}}}$\
  ![](./md_image/2024-11-08-13-31-27.png)
 
-## Chapter 9. Router
+## [Chapter 9. Router](#chapter-정리)
 
-<span style="font-size:16px">앞서 index.js에서 〈App /〉을 〈BrowserRouter〉감싸기</span>
+<p style="22px"> 앞서... </p>
+
+<span style="font-size:16px"> 1. npm install react-router-dom 설치하기 </span>\
+<span style="font-size:16px"> 2. index.js에서 〈App /〉을 〈BrowserRouter〉감싸기</span>\
+<span style="font-size:16px">ㅇ</span>
+
+-  핵심 : 링크이동의 경로를 찾아줌
+-  Link : star형식을 사용하기 위해서 사용 (a태그는 불가능)
+-  LavLink : Link와 동작은 같으나 [ class = 'active' ] 주기에 css로 스타일을 줄 수 있음
+-  [ path="/*" ] : 별표를 붙일 시 모든 경로를 뜻하기에 뒤에 어떤 경로여도 해당 Route의 element를 준다.
+-  :path_para (패스파라) : 뭐가 올지 모를때 {pathTest /}에 보냄\
+    이는[ useParams ]를 이용해서 사용
+
+<details>
+<summary>
+[ 설정 코드 ]
+</summary>
 
 ```
-/* ---index.js--- */
+/* --- index.js --- */
 <BrowserRouter>
     <App />
 </BrowserRouter>
-
-/* ---App.js--- */
-import { Route, Routes } from ''
 ```
+
+```
+/* --- App.js --- */
+import { Route, Routes, Link, LavLink, useParams } from 'react-router-dom'
+```
+
+</details>
+
+## [Chapter 10. Styled Componenets](#chapter-정리)
+
+## [Chapter 11. Redux](#chapter-정리)
+
+useReduce(Hook) 기존 state의 관리를 편하게 함
+
+state : 장부역할,,, 기존 state는 고객이 직접 장부를 작성한다고 비유
+
+
+
+상태관리하는 툴 (Redux)
+
+
+## [Chapter 12. Redux Toolkit](#chapter-정리)
