--- a/React_study/myfolder/총정리.md
+++ b/React_study/myfolder/총정리.md
@@ -1,4 +1,5 @@
 # Chapter 정리
+<p> $\large{\textsf{\color{orange}{Chapter List}}}$ </p>
 
 -  <span style="20px"> [Chapter 4. Event Handling](#chapter-4-event-handling) </span>
 -  <span style="20px"> [Chapter 6. Hook](#chapter-6-hook) </span>
