--- a/React_study/myfolder/총정리.md
+++ b/React_study/myfolder/총정리.md
@@ -1,11 +1,13 @@
 # Chapter 정리
 
+<p> $\large{\textsf{\color{orange}{Chapter List}}}$ </p>
+
 -  <span style="20px"> [Chapter 4. Event Handling](#chapter-4-event-handling) </span>
 -  <span style="20px"> [Chapter 6. Hook](#chapter-6-hook) </span>
 -  <span style="20px"> [Chapter 9. Router](#chapter-9-router) </span>
 -  <span style="20px"> [Chapter 10. Styled Components](#chapter-10-styled-componenets) </span>
 -  <span style="20px"> [Chapter 11. Redux](#chapter-11-redux) </span>
--  <span style="20px"> [Chapter 12. Redux](#chapter-12-redux-toolkit) </span>
+-  <span style="20px"> [Chapter 12. Redux Toolkit](#chapter-12-redux-toolkit) </span>
 
 useState : 인풋창 사용때 가장 많이 쓰는것같다고함
 분리를 해서 써야 useCallback 쓰기 편함
@@ -19,6 +21,8 @@ useCallback : 함수의 재생성 방지 => 최적화
 
 컴포넌트 안에 있는 저런 함수같은경우
 onChange = useCallback((e) => setText(e.target.value),[])
+
+##
 
 ## Chapter3.jsx
 
@@ -420,9 +424,29 @@ useReduce(Hook) 기존 state의 관리를 편하게 함
 
 state : 장부역할,,, 기존 state는 고객이 직접 장부를 작성한다고 비유
 
-
-
 상태관리하는 툴 (Redux)
 
-
 ## [Chapter 12. Redux Toolkit](#chapter-정리)
+
+<p> $\large{\textsf{\color{orange}{앞서...}}}$ </p>
+<span style="font-size:16px"> npm install @reduxjs/toolkit react-redux 설치하기 </span>
+
+- 3가지 구성요소
+    1. configureStore (createStore)
+    2. createSlice (reducer)
+    3. dispatch 파일
+
+<details>
+<summary>
+[ 설정 코드 ]\
+
+Counter.jsx ( App.js에 보낼 컴포넌트 )
+
+
+counterReducer.js ( state의 값 변경 함수 )
+
+
+store.js ( state의 저장 )
+
+</summary>
+</details>
