--- a/React_study/myfolder/총정리.md
+++ b/React_study/myfolder/총정리.md
@@ -449,3 +449,9 @@ store.js ( state의 저장 )
 
 </summary>
 </details>
+
+[하위](https://github.com/jo4086/React/blob/jo4086-patch-1/React_study/myfolder/reducerCounter.md)
+
+[경로복사](C:\project\react_class\React_study\myfolder\src\summarize\Chapter11\chapter11.md)
+
+[상대경로](./src/summarize/Chapter11/chapter11.md)
