--- a/React_study/myfolder/총정리.md
+++ b/React_study/myfolder/총정리.md
@@ -12,7 +12,7 @@
 useState : 인풋창 사용때 가장 많이 쓰는것같다고함
 분리를 해서 써야 useCallback 쓰기 편함
 useCallback : 함수의 재생성 방지 => 최적화
-
+git
 -  중요 포인트
    -  리액트 : 스테이트가 바뀔때마다 재 랜던링\
        이는 컴포넌트 function안에있는 코드를 처음부터 다시 실행을 의미
